--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 Flask == 3.0.3
+Flask-Migrate == 4.0.7
+Flask-Login == 0.6.3
+Flask-SQLAlchemy ==3.1.1
+Flask-WTF == 1.2.1
 Wraps == 0.12.0
 gunicorn == 22.0.0
