--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,9 @@ Flask-Migrate == 4.0.7
 Flask-Login == 0.6.3
 Flask-SQLAlchemy ==3.1.1
 Flask-WTF == 1.2.1
+WTForms-Alchemy == 0.18.0
+WTForms-Components == 0.10.5
+SQLAlchemy == 2.0.29
+SQLAlchemy-Utils == 0.41.2
 Wraps == 0.12.0
 gunicorn == 22.0.0
