--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,6 @@ WTForms-Alchemy == 0.18.0
 WTForms-Components == 0.10.5
 SQLAlchemy == 2.0.29
 SQLAlchemy-Utils == 0.41.2
+psycopg2 == 2.9.9
 Wraps == 0.12.0
 gunicorn == 22.0.0
