--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,26 @@ SQLAlchemy-Utils == 0.41.2
 psycopg2 == 2.9.9
 Wraps == 0.12.0
 gunicorn == 22.0.0
+alembic == 1.13.1
+annotated-types == 0.7.0
+attrs == 23.2.0
+click == 8.1.7
+colorama == 0.4.6
+dnspython == 2.6.1
+email_validator == 2.1.1
+funcs == 0.10.1
+greenlet == 3.0.3
+Jinja2 == 3.1.3
+Mako == 1.3.3
+intervals == 0.9.2
+infinity == 1.5
+idna == 3.7
+itsdangerous == 2.2.0
+MarkupSafe == 2.1.5
+named == 1.4.2
+packaging == 24.1
+pip == 24.0
+setuptools == 69.5.1
+typing-aliases == 1.10.1
+typing_extensions == 4.11.0
+wheel == 0.43.0
